--- a/inventory/group_vars/webgw/firewall.yml
+++ b/inventory/group_vars/webgw/firewall.yml
@@ -10,3 +10,5 @@ firewalld_rich_rules:
 mt_firewall_address_lists:
   - address: "{{ wireguard_ip | default(ansible_host) }}"
     list: allow-www
+  - address: "{{ wireguard_ipv6 | default(ansible_host6) }}"
+    list: www
