--- a/inventory/group_vars/kvm_hv/networkd.yml
+++ b/inventory/group_vars/kvm_hv/networkd.yml
@@ -19,7 +19,7 @@ __ip_offset: 50
 __host_ips:
   general: "{{ all_net.general.cidr | ansible.utils.ipaddr(__host_num | int + __ip_offset) }}"
   mgmt: "{{ all_net.mgmt.cidr | ansible.utils.ipaddr(__host_num) }}"
-  san: "{{ all_net.san.cidr | ansible.utils.ipaddr(__host_num) }}"
+  san: "{{ subnets.san.hosts | ansible.utils.ipv4 | ipaddr_concat(host_num, prefixlen=24) }}"
   vm: "{{ all_net.vm.cidr | ansible.utils.ipaddr(__host_num | int + __ip_offset) }}"
 
 host_ips: >-
