--- a/inventory/group_vars/k8s_cluster/metallb.yml
+++ b/inventory/group_vars/k8s_cluster/metallb.yml
@@ -6,8 +6,7 @@ metallb_speaker_enabled: false
 metallb_config:
   address_pools:
     primary:
-      ip_range:
-        - "{{ kube_subnet.lb.cidr }}"
+      ip_range: "{{ subnets.kube.lb }}"
       auto_assign: true
   layer2:
     - primary
