--- a/inventory/group_vars/ceph/rgw.yml
+++ b/inventory/group_vars/ceph/rgw.yml
@@ -6,6 +6,6 @@ rgw_networks:
   - "{{ all_net.vm.cidr }}"
 
 rgw_ingress_port: 443
-rgw_ingress_vip: "{{ all_net.vm.cidr | ansible.utils.ipaddr('20') }}"
+rgw_ingress_vip: "{{ vips_with_prefix.vm.ceph_rgw }}"
 rgw_ingress_networks:
   - "{{ all_net.vm.cidr }}"
