--- a/inventory/group_vars/servers/vars.yml
+++ b/inventory/group_vars/servers/vars.yml
@@ -15,7 +15,7 @@ ssh_authorized_keys:
   - "{{ hostvars['desktop'].ssh_keys.andrei }}"
   - "{{ hostvars['laptop'].ssh_keys.andrei }}"
 
-domain: "vm.{{ domains['hb'] }}"
+domain: "{{ all_net.vm.domain }}"
 
 btrfs_scrub_email: "{{ smartd_email }}"
 btrfs_scrub_from_email: "{{ smartd_from_address }}"
