--- a/inventory/group_vars/gitlab/dns.yml
+++ b/inventory/group_vars/gitlab/dns.yml
@@ -1,5 +1,5 @@
 ---
 
 mt_dns_entries:
-  - name: "{{ inventory_hostname }}.vm.{{ domains['hb'] }}"
+  - name: "{{ inventory_hostname }}.{{ all_net.vm.domain }}"
     address: "{{ ansible_host }}"
