--- a/inventory/host_vars/theia/dns.yml
+++ b/inventory/host_vars/theia/dns.yml
@@ -4,11 +4,11 @@ __mt_dns_entries_group: []
 __mt_dns_entries_host:
   - name: "{{ inventory_hostname }}.{{ domains['hb'] }}"
     address: "{{ host_ips.general }}"
-  - name: "{{ inventory_hostname }}.man.{{ domains['hb'] }}"
+  - name: "{{ inventory_hostname }}.{{ all_net.mgmt.domain }}"
     address: "{{ host_ips.mgmt }}"
-  - name: "{{ inventory_hostname }}.san.{{ domains['hb'] }}"
+  - name: "{{ inventory_hostname }}.{{ all_net.san.domain }}"
     address: "{{ host_ips.san }}"
-  - name: "{{ inventory_hostname }}.vm.{{ domains['hb'] }}"
+  - name: "{{ inventory_hostname }}.{{ all_net.vm.domain }}"
     address: "{{ host_ips.vm }}"
   - name: "{{ inventory_hostname }}.ipmi.{{ domains['hb'] }}"
     # 10.0.100.111
