--- a/inventory/group_vars/k8s_cluster/dns.yml
+++ b/inventory/group_vars/k8s_cluster/dns.yml
@@ -10,5 +10,5 @@ __mt_dns_entries_vip:
   - name: "k8s.{{ domains['hb'] }}"
     address: "{{ kube_vip_address }}"
   - regexp: ".*\\.kube\\.{{ domains['hb'] | regex_escape() }}$"
-    address: "{{ ingress_nginx_lb_ip }}"
+    address: "{{ vips.kube.nginx }}"
     ttl: 5m
