Change rom WG IPs
Cherry-pick from net-rework.
Rename wireguard_ipv6 to wireguard_ip6

--- a/inventory/group_vars/all/vars.yml
+++ b/inventory/group_vars/all/vars.yml
@@ -32,3 +32,6 @@ prometheus_blackbox_icmp_targets: ["{{ wireguard_ip | default(ansible_host) }}"]
 prometheus_node_targets: ["{{ wireguard_ip | default(ansible_host) + ':' + node_exporter_port | string }}"]
 prometheus_node_labels:
   instance: "{{ inventory_hostname }}"
+
+# Using "unmanaged" instead
+wireguard_managed_peers: []
