--- a/inventory/host_vars/750gl/wireguard.yml
+++ b/inventory/host_vars/750gl/wireguard.yml
@@ -1,11 +1,9 @@
 ---
 
 wireguard_addresses:
-  - "{{ wg_net.mt.cidr | ansible.utils.ipaddr('202') }}"
-  - "{{ wg_net.mt.cidr6 | ansible.utils.ipaddr('0x202' | int(base=16)) }}"
+  - "{{ wireguard_ip }}/{{ wg_net[host_wg_net].cidr | ansible.utils.ipaddr('prefix') | string }}"
+  - "{{ wireguard_ip6 }}/{{ wg_net[host_wg_net].cidr6 | ansible.utils.ipaddr('prefix') | string }}"
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
-wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
-wireguard_ipv6: "{{ wireguard_addresses[1] | ansible.utils.ipaddr('address') }}"
 wireguard_endpoint: "{{ vault_wireguard_endpoint }}"
 wireguard_public_key: "{{ vault_wireguard_public_key }}"
 
