--- a/inventory/host_vars/laptop/wireguard.yml
+++ b/inventory/host_vars/laptop/wireguard.yml
@@ -7,7 +7,7 @@ wireguard_addresses:
 
 wireguard_dns_list:
   - "{{ hostvars['rb5009'].wireguard_ip }}"
-  - "{{ hostvars['rb5009'].wireguard_ipv6 }}"
+  - "{{ hostvars['rb5009'].wireguard_ip6 }}"
   - "1.1.1.1"
   - "8.8.8.8"
 
@@ -19,7 +19,7 @@ wireguard_mt_allowed_ips:
 
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
 wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
-wireguard_ipv6: "{{ wireguard_addresses[1] | ansible.utils.ipaddr('address') }}"
+wireguard_ip6: "{{ wireguard_addresses[1] | ansible.utils.ipaddr('address') }}"
 wireguard_dns: "{{ wireguard_dns_list | join(', ') }}"
 wireguard_private_key: "{{ lookup('community.general.passwordstore', 'network/' + inventory_hostname + '_wg_pk') }}"
 wireguard_public_key: "{{ vault_wireguard_public_key }}"
