--- a/inventory/host_vars/rb5009/wireguard.yml
+++ b/inventory/host_vars/rb5009/wireguard.yml
@@ -5,7 +5,7 @@ wireguard_addresses:
   - "{{ wg_net.mt.cidr6 | ansible.utils.ipaddr('1') }}"
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
 wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
-wireguard_ipv6: "{{ wireguard_addresses[1] | ansible.utils.ipaddr('address') }}"
+wireguard_ip6: "{{ wireguard_addresses[1] | ansible.utils.ipaddr('address') }}"
 wireguard_endpoint: "{{ vault_wireguard_endpoint }}"
 wireguard_public_key: "{{ vault_wireguard_public_key }}"
 
