--- a/inventory/host_vars/romsto/wireguard.yml
+++ b/inventory/host_vars/romsto/wireguard.yml
@@ -3,8 +3,8 @@
 wireguard_port: "51820"
 wireguard_interface: "wg0"
 wireguard_addresses:
-  - "{{ wg_net.mt.cidr | ansible.utils.ipaddr('206') }}"
-  # - "{{ wg_net.mt.cidr6 | ansible.utils.ipaddr('0x206' | int(base=16)) }}"
+  - "{{ wireguard_ip }}/{{ wg_net[host_wg_net].cidr | ansible.utils.ipaddr('prefix') | string }}"
+  # - "{{ wireguard_ip6 }}/{{ wg_net[host_wg_net].cidr6 | ansible.utils.ipaddr('prefix') | string }}"
 
 wireguard_mt_allowed_ips:
   - "{{ hostvars['rb5009'].wireguard_ip }}/32"
@@ -18,7 +18,6 @@ mt_wg_allowed_addresses:
   - "10.1.0.0/24"
 
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
-wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
 wireguard_private_key: "{{ lookup('community.general.passwordstore', 'network/' + inventory_hostname + '_wg_pk') }}"
 wireguard_public_key: "{{ vault_wireguard_public_key }}"
 wireguard_endpoint: "{{ vault_wireguard_endpoint }}"
